--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <div id="root">
-            <div class="container">
+            <div class="container" :class="colore">
                 <h1>{{ testo }}</h1>
                 <img :src="immagine">
                 <div class="button-container">
