Vue Hello (Testo bottone dinamico)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1>{{ testo }}</h1>
                 <img :src="immagine">
                 <div class="button-container">
-                    <button @click="cambiaImmagine">Cambia Immagine</button>
+                    <button @click="cambiaImmagine">{{ testoBottone }}</button>
                 </div>
             </div>
         </div>
